wip: kubernetes-manifest

--- a/containers/fluentd-elasticsearch/Gemfile
+++ b/containers/fluentd-elasticsearch/Gemfile
@@ -19,14 +19,12 @@ gem 'rest-client', '~>2.0.2'
 
 gem "git", "~>1.4.0"
 gem "msgpack", "~>1.2.4"
-gem "activesupport", "~>5.2.0"
 # gem "fluent-plugin-kubernetes_metadata_filter", "~>1.0.0"
 # gem "fluent-plugin-elasticsearch", "~>2.4.1"
 # gem "fluent-plugin-systemd", "~>0.3.1"
 # gem "fluent-plugin-detect-exceptions", "~>0.0.9"
 # gem "fluent-plugin-prometheus", "~>0.3.0"
 # gem "fluent-plugin-multi-format-parser", "~>1.0.0"
-gem "oj"
 gem "fluent-logger"
 gem "fluent-mixin-config-placeholders"
 gem "fluent-mixin-plaintextformatter"
@@ -36,7 +34,7 @@ gem "fluent-plugin-ignore-filter"
 gem "fluent-plugin-kubernetes"
 gem "fluent-plugin-mongo"
 gem "fluent-plugin-record-reformer"
-gem "fluent-plugin-rewrite-tag-filter"
+# gem "fluent-plugin-rewrite-tag-filter"
 gem "fluent-plugin-s3"
 gem "fluent-plugin-scribe"
 gem "fluent-plugin-secure-forward"
