wip: fluentd-supervisord

--- a/containers/fluentd-elasticsearch/supervisord.conf
+++ b/containers/fluentd-elasticsearch/supervisord.conf
@@ -5,24 +5,32 @@ nodaemon=true
 command=gosu root bash -c '/usr/local/bin/fluentd'
 autorestart=false
 user=root
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-# stdout_logfile=/dev/stdout
+# stdout_logfile=/dev/fd/1
 # stdout_logfile_maxbytes=0
-# stderr_logfile=/dev/stderr
-stderr_logfile=/dev/fd/1
+# # stdout_logfile=/dev/stdout
+# # stdout_logfile_maxbytes=0
+# # stderr_logfile=/dev/stderr
+# stderr_logfile=/dev/fd/1
+# stderr_logfile_maxbytes=0
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:Fluentd-ui]
 command=gosu root bash -c '/usr/local/bin/fluentd-ui start'
 autorestart=true
 user=root
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-# stdout_logfile=/dev/stdout
+# stdout_logfile=/dev/fd/1
 # stdout_logfile_maxbytes=0
-# stderr_logfile=/dev/stderr
-stderr_logfile=/dev/fd/1
+# # stdout_logfile=/dev/stdout
+# # stdout_logfile_maxbytes=0
+# # stderr_logfile=/dev/stderr
+# stderr_logfile=/dev/fd/1
+# stderr_logfile_maxbytes=0
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 # [program:Elasticsearch]
