--- a/containers/fluentd-elasticsearch/supervisord.conf
+++ b/containers/fluentd-elasticsearch/supervisord.conf
@@ -3,7 +3,8 @@ nodaemon=true
 logfile=/dev/stdout
 
 [program:Fluentd]
-command=gosu root bash -c '/usr/local/bin/fluentd'
+# command=gosu root bash -c '/usr/local/bin/fluentd'
+command=/usr/local/bin/fluentd
 autorestart=false
 user=root
 stdout_logfile=/dev/stdout
@@ -12,7 +13,8 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:Fluentd-ui]
-command=gosu root bash -c '/usr/local/bin/fluentd-ui start'
+# command=gosu root bash -c '/usr/local/bin/fluentd-ui start'
+command=/usr/local/bin/fluentd-ui start
 autorestart=true
 user=root
 stdout_logfile=/dev/stdout
