wip: fluentd-supervisord

--- a/containers/fluentd-elasticsearch/supervisord.conf
+++ b/containers/fluentd-elasticsearch/supervisord.conf
@@ -1,6 +1,7 @@
 [supervisord]
 nodaemon=true
 logfile=/dev/stdout
+stdout_maxbytes=0
 
 [program:Fluentd]
 # command=gosu root bash -c '/usr/local/bin/fluentd'
