--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -304,6 +304,40 @@ boss__efk__fluentd_daemon_set_spec_template_metadata_annotations: |
         scheduler.alpha.kubernetes.io/critical-pod: ''
         seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
 
+
+boss__efk__fluentd_daemon_set_spec_template_spec_securityContext: |
+  runAsNonRoot: false
+  # runAsUser: 65534
+  privileged: true
+
+boss__efk__fluentd_daemon_set_spec_template_spec_volumeMounts: |
+  - name: varlog
+    mountPath: /var/log
+  - name: varlibdockercontainers
+    mountPath: /var/lib/docker/containers
+    readOnly: true
+  # - name: libsystemddir
+  #   mountPath: /host/lib
+  #   readOnly: true
+  - name: config-volume
+    mountPath: /etc/fluent/config.d
+
+boss__efk__fluentd_daemon_set_spec_template_spec_volumes: |
+  - name: varlog
+    hostPath:
+      path: /var/log
+  - name: varlibdockercontainers
+    hostPath:
+      path: /var/lib/docker/containers
+  # It is needed to copy systemd library to decompress journals
+  # - name: libsystemddir
+  #   hostPath:
+  #     path: /usr/lib64
+  - name: config-volume
+    configMap:
+      # name: fluentd-es-config-v0.1.0
+      name: fluentd-es-config-v0.1.6
+
 ############################################
 
 
