wip: fluentd-supervisord

--- a/containers/fluentd-elasticsearch/supervisord-main.conf
+++ b/containers/fluentd-elasticsearch/supervisord-main.conf
@@ -8,6 +8,7 @@ chmod=0700                       ; sockef file mode (default 0700)
 logfile=/opt/supervisor/log/supervisor/supervisord.log ; (main log file;default $CWD/supervisord.log)
 pidfile=/opt/supervisor/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 childlogdir=/opt/supervisor/log/supervisor            ; ('AUTO' child log dir, default $TEMP)
+loglevel=critical
 
 ; the below section must remain in the config file for RPC
 ; (supervisorctl/web interface) to work, additional interfaces may be
