wip: weave_scope

--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -1018,6 +1018,40 @@ boss__markdownrender__version: latest-armhf
 boss__markdownrender__image_repo: "functions/markdownrender"
 boss__markdownrender__image_tag: "{{ boss__markdownrender__version }}"
 
+####################################################################################################
+#                  .########.########.....###....########.########.####.##....##.........####.##....##.########.########.########..##....##....###....##......
+#                  ....##....##.....##...##.##...##.......##........##..##...##...........##..###...##....##....##.......##.....##.###...##...##.##...##......
+#                  ....##....##.....##..##...##..##.......##........##..##..##............##..####..##....##....##.......##.....##.####..##..##...##..##......
+#                  ....##....########..##.....##.######...######....##..#####....#######..##..##.##.##....##....######...########..##.##.##.##.....##.##......
+#                  ....##....##...##...#########.##.......##........##..##..##............##..##..####....##....##.......##...##...##..####.#########.##......
+#                  ....##....##....##..##.....##.##.......##........##..##...##...........##..##...###....##....##.......##....##..##...###.##.....##.##......
+#                  ....##....##.....##.##.....##.########.##.......####.##....##.........####.##....##....##....########.##.....##.##....##.##.....##.########
+##########################################################################################################
+boss__traefik__internal__subdomain: traefik-internal
+boss__traefik__internal__manifest_path: "{{manifest_dir_path}}/traefik-internal"
+boss__traefik__internal__namespace_name: traefik-system
+boss__traefik__internal__service_spec_type: LoadBalancer
+boss__traefik__internal__service_spec_loadBalancerIP: 192.168.205.10
+
+
+####################################################################################################
+#          .##......##.########....###....##.....##.########..........######...######...#######..########..########
+#          .##..##..##.##.........##.##...##.....##.##...............##....##.##....##.##.....##.##.....##.##......
+#          .##..##..##.##........##...##..##.....##.##...............##.......##.......##.....##.##.....##.##......
+#          .##..##..##.######...##.....##.##.....##.######...#######..######..##.......##.....##.########..######..
+#          .##..##..##.##.......#########..##...##..##.....................##.##.......##.....##.##........##......
+#          .##..##..##.##.......##.....##...##.##...##...............##....##.##....##.##.....##.##........##......
+#          ..###..###..########.##.....##....###....########..........######...######...#######..##........########
+##########################################################################################################
+boss__weave__scope__subdomain: weave-scope
+boss__weave__scope__manifest_path: "{{manifest_dir_path}}/weave-scope"
+boss__weave__scope__namespace_name: weave
+boss__weave__scope__manifest_filename_based_on_networking: "weave-calico-networking.yaml"
+boss__weave__scope__enable_ingress_traefik: "enabled"
+
+boss__weave__scope__ingress_metadata_annotations: |
+  traefik.frontend.rule.type: PathPrefix
+
 # ---
 # local_release_dir: /tmp/releases
 
