wip: prometheus_operator: kubernetes-cluster

--- a/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/tasks/main.yaml
+++ b/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/tasks/main.yaml
@@ -78,4 +78,4 @@
     - "prometheus-serviceMonitorKubeControllerManager.yaml"
     - "prometheus-serviceMonitorKubeScheduler.yaml"
     - "prometheus-serviceMonitorKubelet.yaml"
-    - "additional-scrape-configs.yaml"
+    # - "additional-scrape-configs.yaml"
