--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -1037,6 +1037,17 @@ boss__prometheus__operator__grafana_subdomain: grafana
 boss__prometheus__operator__grafana_version: 5.2.4
 boss__prometheus__operator__grafana_image_repo: "grafana/grafana"
 boss__prometheus__operator__grafana_image_tag: "{{ boss__prometheus__operator__grafana_version }}"
+boss__prometheus__operator__grafana_cpu_limit: 2000m
+boss__prometheus__operator__grafana_mem_limit: 500Mi
+boss__prometheus__operator__grafana_cpu_requests: 1000m
+boss__prometheus__operator__grafana_mem_requests: 200Mi
+boss__prometheus__operator__grafana_deployment_spec_template_spec_containers_resources: |
+  limits:
+    cpu: 2000m
+    memory: 200Mi
+  requests:
+    cpu: 1000m
+    memory: 100Mi
 
 boss__prometheus__operator__prometheus_subdomain: prometheus
 boss__prometheus__operator__prometheus_version: v2.5.0
@@ -1047,6 +1058,13 @@ boss__prometheus__operator__prometheus_operator_version: v0.26.0
 boss__prometheus__operator__prometheus_operator_image_repo: "quay.io/coreos/prometheus-operator"
 boss__prometheus__operator__prometheus_operator_image_tag: "{{ boss__prometheus__operator__prometheus_operator_version }}"
 
+boss__prometheus__operator__configmap_reload_version: v0.0.1
+boss__prometheus__operator__configmap_reload_image_repo: "quay.io/coreos/configmap-reload"
+boss__prometheus__operator__configmap_reload_image_tag: "{{ boss__prometheus__operator__configmap_reload_version }}"
+
+boss__prometheus__operator__prometheus_operator_config_reloader_version: v0.26.0
+boss__prometheus__operator__prometheus_operator_config_reloader_image_repo: "quay.io/coreos/prometheus-config-reloader"
+boss__prometheus__operator__prometheus_operator_config_reloader_image_tag: "{{ boss__prometheus__operator__prometheus_operator_config_reloader_version }}"
 
 boss__prometheus__operator__alertmanager_ingress_metadata_annotations: |
   # Note the nginx.ingress.kubernetes.io/ssl-redirect annotation. It is used since we are not specifying a host. When no host is specified, then the default-server is hit, which is configured with a self-signed certificate, and redirects http to https. This issue explains more.
@@ -1124,6 +1142,72 @@ boss__prometheus__operator__grafana_ingress_metadata_annotations: |
 boss__prometheus__operator__grafana_ingress_metadata_labels: |
   run: nginx
   app: grafana
+
+################# Persistent volume claims
+
+# persistent volume claim - grafana
+boss__prometheus__operator__grafana_pvc_labels: |
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  k8s-app: prometheus-operator
+
+boss__prometheus__operator__grafana_pvc_spec_storageClassName: "nfs-dynamic-class"
+boss__prometheus__operator__grafana_pvc_spec_resources_requests_storage: "2Gi"
+
+# persistent volume - grafana
+boss__prometheus__operator__grafana_pv_labels: |
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    k8s-app: prometheus-operator
+    boss-part-of: prometheus-operator
+
+boss__prometheus__operator__grafana_pv_spec_capacity_storage: 2Gi
+boss__prometheus__operator__grafana_pv_spec_nfs: |
+    server: 192.168.1.174
+    path: "/mnt/publicdata/grafana"
+
+
+# persistent volume claim - prometheus-adapter-tmpfs
+boss__prometheus__operator__prometheus_adapter_tmpfs_pvc_labels: |
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    k8s-app: prometheus-operator
+
+boss__prometheus__operator__prometheus_adapter_tmpfs_pvc_spec_storageClassName: "nfs-dynamic-class"
+boss__prometheus__operator__prometheus_adapter_tmpfs_pvc_spec_resources_requests_storage: "2Gi"
+
+# persistent volume - prometheus-adapter-tmpfs
+boss__prometheus__operator__prometheus_adapter_tmpfs_pv_labels: |
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  k8s-app: prometheus-operator
+  boss-part-of: prometheus-operator
+
+boss__prometheus__operator__prometheus_adapter_tmpfs_pv_spec_capacity_storage: 2Gi
+boss__prometheus__operator__prometheus_adapter_tmpfs_pv_spec_nfs: |
+    server: 192.168.1.174
+    path: "/mnt/publicdata/prometheus-adapter-tmpfs"
+
+# persistent volume claim - prometheus-adapter-volume-serving-cert
+boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pvc_labels: |
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    k8s-app: prometheus-operator
+
+boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pvc_spec_storageClassName: "nfs-dynamic-class"
+boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pvc_spec_resources_requests_storage: "2Gi"
+
+# persistent volume - prometheus-adapter-volume-serving-cert
+boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pv_labels: |
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    k8s-app: prometheus-operator
+    boss-part-of: prometheus-operator
+
+boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pv_spec_capacity_storage: 2Gi
+boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pv_spec_nfs: |
+    server: 192.168.1.174
+    path: "/mnt/publicdata/prometheus-adapter-volume-serving-cert"
 
 # ---
 # local_release_dir: /tmp/releases
