--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -95,6 +95,8 @@ boss__calico__node_daemonset_annotations: |
   prometheus.io/scrape: 'true'
   prometheus.io/port: '9091'
 
+boss__calico__typha_deployment_spec_replicas: 3
+
 # {{ calico_node_image_repo }}:{{ calico_node_image_tag }}
 
 ##########################################################################################################
